Added data loading.

--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -20,10 +20,50 @@
     "# import scipy.spatial.distance\n",
     "# from scipy.linalg import eigh as largest_eigh\n",
     "# import sklearn.metrics\n",
+    "# from PIL import Image\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "# from PIL import Image\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import ntpath\n",
+    "# https://stackoverflow.com/questions/8384737/extract-file-name-from-path-no-matter-what-the-os-path-format\n",
+    "def path_leaf(path):\n",
+    "    head, tail = ntpath.split(path)\n",
+    "    return tail or ntpath.basename(head)\n",
+    "\n",
+    "def load_data():\n",
+    "  dataset = []\n",
+    "  labels = []\n",
+    "  label_index = 0\n",
+    "  for dirname, dirnames, filenames in os.walk('HMP_Dataset'):\n",
+    "      # target all leaf directories not ending with '_MODEL'.\n",
+    "      if len(dirnames) == 0 and '_MODEL' not in dirname:\n",
+    "        class_name = path_leaf(dirname)\n",
+    "        labels.append(class_name)\n",
+    "#         print(\"dirname: {}, filenames: {}\".format(dirname, len(filenames)))\n",
+    "        for filename in filenames:\n",
+    "#             print(os.path.join(dirname, filename))\n",
+    "            dataset.append((np.loadtxt(os.path.join(dirname, filename)), label_index))\n",
+    "        label_index += 1\n",
+    "  return dataset, labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset, labels = load_data()\n",
+    "labels"
    ]
   }
  ],
