--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -23,7 +23,9 @@
     "# from PIL import Image\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "#from sklearn.model_selection import train_test_split\n",
+    "from sklearn.cluster import KMeans"
    ]
   },
   {
@@ -62,8 +64,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset, labels = load_data()\n",
-    "labels"
+    "dataset, labels = load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_example(example, k, offset):\n",
+    "  chunk_list = np.array_split(example, np.arange(k, len(data), step=k))\n",
+    "  if len(chunk_list[-1]) != k:\n",
+    "    chunk_list = chunk_list[:-1]\n",
+    "  if offset != k:\n",
+    "    chunk_list = chunk_list[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cut into k-sized chunks and fill the dictionary.\n",
+    "k = 32\n",
+    "dictionary = []\n",
+    "for example in dataset:\n",
+    "  data = example[0]\n",
+    "  split_data = np.array_split(data, np.arange(k,len(data),step=k))\n",
+    "  # Drop the last chunk from the view if it is shorter than k.\n",
+    "  if len(split_data[-1]) != k:\n",
+    "    split_data = split_data[:-1]\n",
+    "  # print(\"example size: {} split into {} chunks\".format(data.shape,len(split_data)))\n",
+    "  split_data = [np.ravel(chunk) for chunk in split_data]\n",
+    "  dictionary.extend(split_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run k-means\n",
+    "km = KMeans(n_clusters=480, random_state=0).fit(dictionary)\n",
+    "# km.predict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Snippets"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "print(dataset[0][0].shape)\n",
+    "train, test = train_test_split(dataset, test_size=0.33)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "data = np.ones((2167,3))\n",
+    "my_split = np.array_split(data, np.arange(32,len(data),step=32))\n",
+    "len(my_split[-2])"
    ]
   }
  ],
