--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -24,7 +24,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "#from sklearn.model_selection import train_test_split\n",
     "from sklearn.cluster import KMeans"
    ]
   },
@@ -73,12 +72,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def split_example(example, k, offset):\n",
+    "def split_and_flatten_example(example, k, offset):\n",
     "  chunk_list = np.array_split(example, np.arange(k, len(data), step=k))\n",
     "  if len(chunk_list[-1]) != k:\n",
     "    chunk_list = chunk_list[:-1]\n",
     "  if offset != k:\n",
-    "    chunk_list = chunk_list[1:]"
+    "    chunk_list = chunk_list[1:]\n",
+    "  chunk_list = [np.ravel(chunk) for chunk in chunk_list]\n",
+    "  return chunk_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class h_kmeans:\n",
+    "  n_jobs = 2\n",
+    "  def __init__(self, k_breadth):\n",
+    "    # k_breadth is a vector of K for each depth.  The depth of the tree == length of k_breadth.\n",
+    "    self.my_k = k_breadth\n",
+    "    print (\"Initializing KMeans, n_clusters = {}\".format(self.my_k[0]))\n",
+    "    self.km = KMeans(n_clusters=self.my_k[0], n_jobs=-1)\n",
+    "    self.children = []\n",
+    "    if len(k_breadth) > 1:\n",
+    "      # Remove my k, pass the rest to the children.\n",
+    "      self.children = [h_kmeans(k_breadth[1:]) for km in range(self.my_k[0])]\n",
+    "      # self.children = [h_kmeans(k_breadth[1:])] * self.my_k[0]\n",
+    "\n",
+    "  def fit(self, X):\n",
+    "    self.km.fit(X)\n",
+    "    if len(self.children) > 0:\n",
+    "      clusters = self.km.predict(X)\n",
+    "      for index, child_node in enumerate(self.children):\n",
+    "        # print(clusters == index)\n",
+    "        child_node.fit(X[clusters == index])\n",
+    "  \n",
+    "  def predict(self, X):\n",
+    "    if len(self.children) == 0:\n",
+    "      clusters = self.km.predict(X)\n",
+    "      return clusters\n",
+    "    if len(self.children) > 0:\n",
+    "      clusters = self.km.predict(X)\n",
+    "      depth_clusters = []\n",
+    "      for i in range(len(X)):\n",
+    "        depth_clusters.append(\n",
+    "          clusters[i] * self.myk[1] + self.children[clusters[i]].predict(X[i]))\n",
+    "      return depth_clusters"
    ]
   },
   {
@@ -89,16 +130,15 @@
    "source": [
     "# Cut into k-sized chunks and fill the dictionary.\n",
     "k = 32\n",
+    "# TODO: dictionary is a poor name for this.\n",
     "dictionary = []\n",
     "for example in dataset:\n",
     "  data = example[0]\n",
-    "  split_data = np.array_split(data, np.arange(k,len(data),step=k))\n",
-    "  # Drop the last chunk from the view if it is shorter than k.\n",
-    "  if len(split_data[-1]) != k:\n",
-    "    split_data = split_data[:-1]\n",
-    "  # print(\"example size: {} split into {} chunks\".format(data.shape,len(split_data)))\n",
-    "  split_data = [np.ravel(chunk) for chunk in split_data]\n",
-    "  dictionary.extend(split_data)"
+    "  for offset in range(0, k, 11): # 0, 11, 22, to get about 3 x 13544 chunks.\n",
+    "    split_data = split_and_flatten_example(data, k, k - offset)\n",
+    "    # print(\"example size: {} split into {} chunks\".format(data.shape,len(split_data)))\n",
+    "    dictionary.extend(split_data)\n",
+    "dictionary = np.array(dictionary) # convert from list of arrays to 2D array"
    ]
   },
   {
@@ -106,7 +146,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(dictionary)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -115,8 +157,24 @@
    "outputs": [],
    "source": [
     "# Run k-means\n",
-    "km = KMeans(n_clusters=480, random_state=0).fit(dictionary)\n",
+    "# km = KMeans(n_clusters=480, random_state=0, n_jobs=2).fit(dictionary)\n",
+    "km = h_kmeans((40,12))\n",
+    "km.fit(dictionary)\n",
     "# km.predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subdict = dictionary[:20]\n",
+    "clusters = km.predict(subdict)\n",
+    "for i, cluster in enumerate(clusters[clusters >= 400]):\n",
+    "  print(\"i {} cluster {}\".format(i, cluster))\n",
+    "  cluster = -1\n",
+    "print(clusters)"
    ]
   },
   {
