More work on h_kmeans.  Experiments with ndarray views.

--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -89,12 +89,12 @@
    "outputs": [],
    "source": [
     "class h_kmeans:\n",
-    "  n_jobs = 2\n",
+    "  n_jobs = -1\n",
     "  def __init__(self, k_breadth):\n",
     "    # k_breadth is a vector of K for each depth.  The depth of the tree == length of k_breadth.\n",
     "    self.my_k = k_breadth\n",
-    "    print (\"Initializing KMeans, n_clusters = {}\".format(self.my_k[0]))\n",
-    "    self.km = KMeans(n_clusters=self.my_k[0], n_jobs=-1)\n",
+    "    # print (\"Initializing KMeans, n_clusters = {}\".format(self.my_k[0]))\n",
+    "    self.km = KMeans(n_clusters=self.my_k[0], n_jobs=h_kmeans.n_jobs)\n",
     "    self.children = []\n",
     "    if len(k_breadth) > 1:\n",
     "      # Remove my k, pass the rest to the children.\n",
@@ -106,8 +106,10 @@
     "    if len(self.children) > 0:\n",
     "      clusters = self.km.predict(X)\n",
     "      for index, child_node in enumerate(self.children):\n",
-    "        # print(clusters == index)\n",
-    "        child_node.fit(X[clusters == index])\n",
+    "        # pick out the rows that were predicted for cluster child_node.\n",
+    "        match = clusters == index\n",
+    "        print(\"fitting child using {} rows.\".format(np.sum(match)))\n",
+    "        child_node.fit(X[match])\n",
     "  \n",
     "  def predict(self, X):\n",
     "    if len(self.children) == 0:\n",
@@ -116,7 +118,13 @@
     "    if len(self.children) > 0:\n",
     "      clusters = self.km.predict(X)\n",
     "      depth_clusters = []\n",
+    "      # TODO: We could pass sample_weight, and have it be 0 where it doesn't \n",
+    "      # belong to this child, and 1 where it does.  That would get rid of the\n",
+    "      # for loop.\n",
     "      for i in range(len(X)):\n",
+    "        # a cluster anywhere on the tree should have a unique id for histogramming\n",
+    "        # This math is supposed to use children results to get the flattened cluster\n",
+    "        # index.\n",
     "        depth_clusters.append(\n",
     "          clusters[i] * self.myk[1] + self.children[clusters[i]].predict(X[i]))\n",
     "      return depth_clusters"
@@ -169,6 +177,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "km = KMeans(n_clusters=480, random_state=0, n_jobs=2).fit(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
     "subdict = dictionary[:20]\n",
     "clusters = km.predict(subdict)\n",
     "for i, cluster in enumerate(clusters[clusters >= 400]):\n",
@@ -182,6 +197,14 @@
    "metadata": {},
    "source": [
     "# Snippets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split experiments.\n",
+    "Probably going to use kfold anyway."
    ]
   },
   {
@@ -199,6 +222,67 @@
     "data = np.ones((2167,3))\n",
     "my_split = np.array_split(data, np.arange(32,len(data),step=32))\n",
     "len(my_split[-2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experiments with NDArray Views.\n",
+    "Never did find a way to use integer indexing to produce a view."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_all_to_value(a, value):\n",
+    "  a.fill(value)\n",
+    "\n",
+    "foo = np.tile(np.array(np.arange(5)), 5)\n",
+    "set_all_to_value(foo.view()[[1, 2, 8, 11]], -1)\n",
+    "foo[[1, 2, 8, 11]][2] = -1\n",
+    "foo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# x = np.array([(1, 2),(3,4)], dtype=[('aasdf', np.int8), ('bwerewr', np.int8)])\n",
+    "x = np.array([1, 2, 3, 4])# , dtype=[('aasdf', np.int8), ('bwerewr', np.int8)])\n",
+    "print(x)\n",
+    "#xv = x.view(dtype=np.int8).reshape(-1,2)\n",
+    "xv = x.view()\n",
+    "print(xv)\n",
+    "y = xv[[1, 2],]\n",
+    "y[1] = -20\n",
+    "print(y)\n",
+    "print(xv)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.arange(5)\n",
+    "x\n",
+    "\n",
+    "y = x[::2]\n",
+    "y\n",
+    "\n",
+    "y[0] = 3\n",
+    "x\n",
+    "\n",
+    "np.sum(x == 3)\n",
+    "# x == 3"
    ]
   }
  ],
