fixes to h_kmeans.

--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -126,8 +126,8 @@
     "        # This math is supposed to use children results to get the flattened cluster\n",
     "        # index.\n",
     "        depth_clusters.append(\n",
-    "          clusters[i] * self.myk[1] + self.children[clusters[i]].predict(X[i]))\n",
-    "      return depth_clusters"
+    "          clusters[i] * self.my_k[1] + self.children[clusters[i]].predict(X[i].reshape(1, -1)).item())\n",
+    "      return np.array(depth_clusters)"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(dictionary)\n"
+    "len(dictionary)"
    ]
   },
   {
@@ -166,9 +166,21 @@
    "source": [
     "# Run k-means\n",
     "# km = KMeans(n_clusters=480, random_state=0, n_jobs=2).fit(dictionary)\n",
-    "km = h_kmeans((40,12))\n",
-    "km.fit(dictionary)\n",
+    "hkm = h_kmeans((40,12))\n",
+    "hkm.fit(dictionary)\n",
     "# km.predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splitImage = split_and_flatten_example(dataset[0][0], k, 0)\n",
+    "pred = hkm.predict(splitImage)\n",
+    "pred1 = np.array(pred)\n",
+    "pred1"
    ]
   },
   {
@@ -181,6 +193,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splitImage = split_and_flatten_example(dataset[0][0], k, 0)\n",
+    "km.predict(splitImage)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Snippets"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
@@ -190,13 +219,6 @@
     "  print(\"i {} cluster {}\".format(i, cluster))\n",
     "  cluster = -1\n",
     "print(clusters)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Snippets"
    ]
   },
   {
@@ -283,6 +305,22 @@
     "\n",
     "np.sum(x == 3)\n",
     "# x == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array(5)\n",
+    "b = np.array(6)\n",
+    "c = np.array(7)\n",
+    "v = []\n",
+    "v.append(a)\n",
+    "v.append(b.item())\n",
+    "v.append(c.item())\n",
+    "v"
    ]
   }
  ],
