--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -178,9 +178,9 @@
    "outputs": [],
    "source": [
     "splitImage = split_and_flatten_example(dataset[0][0], k, 0)\n",
+    "\n",
     "pred = hkm.predict(splitImage)\n",
-    "pred1 = np.array(pred)\n",
-    "pred1"
+    "pred"
    ]
   },
   {
@@ -199,6 +199,7 @@
    "outputs": [],
    "source": [
     "splitImage = split_and_flatten_example(dataset[0][0], k, 0)\n",
+    "\n",
     "km.predict(splitImage)"
    ]
   },
