--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "def split_and_flatten_example(example, k, offset):\n",
-    "  chunk_list = np.array_split(example, np.arange(k, len(data), step=k))\n",
+    "  chunk_list = np.array_split(example, np.arange(k, len(example), step=k))\n",
     "  if len(chunk_list[-1]) != k:\n",
     "    chunk_list = chunk_list[:-1]\n",
     "  if offset != k:\n",
@@ -155,14 +155,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(dictionary)"
+    "K = 480"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Run k-means\n",
     "# km = KMeans(n_clusters=480, random_state=0, n_jobs=2).fit(dictionary)\n",
@@ -172,14 +170,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "splitImage = split_and_flatten_example(dataset[0][0], k, 0)\n",
-    "\n",
-    "pred = hkm.predict(splitImage)\n",
+    "split_image = split_and_flatten_example(example[0][0], k, 0)\n",
+    "pred = hkm.predict(split_image)\n",
     "pred"
    ]
   },
@@ -198,9 +193,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "splitImage = split_and_flatten_example(dataset[0][0], k, 0)\n",
-    "\n",
-    "km.predict(splitImage)"
+    "hist_points = []\n",
+    "for example in dataset:\n",
+    "  split_image = split_and_flatten_example(example[0], k, 0)\n",
+    "  clusters = km.predict(split_image)\n",
+    "  hist, bin_edges = np.histogram(clusters, density=True, bins=np.arange(K+1))\n",
+    "  hist_points.append(hist)\n",
+    "hist_points = np.array(hist_points)\n",
+    "class_labels = np.array(list(zip(*dataset))[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kf = KFold(n_splits=3, shuffle=True)\n",
+    "for train_index, test_index in kf.split(hist_points, class_labels):\n"
    ]
   },
   {
