--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -15,16 +15,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.decomposition import PCA\n",
-    "# from sklearn.metrics.pairwise import paired_euclidean_distances, euclidean_distances\n",
-    "# import scipy.spatial.distance\n",
-    "# from scipy.linalg import eigh as largest_eigh\n",
-    "# import sklearn.metrics\n",
-    "# from PIL import Image\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.cluster import KMeans"
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
@@ -63,15 +59,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset, labels = load_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def split_and_flatten_example(example, k, offset):\n",
     "  chunk_list = np.array_split(example, np.arange(k, len(example), step=k))\n",
     "  if len(chunk_list[-1]) != k:\n",
@@ -90,26 +77,37 @@
    "source": [
     "class h_kmeans:\n",
     "  n_jobs = -1\n",
-    "  def __init__(self, k_breadth):\n",
-    "    # k_breadth is a vector of K for each depth.  The depth of the tree == length of k_breadth.\n",
-    "    self.my_k = k_breadth\n",
+    "  def __init__(self, n_clusters, n_jobs=-1):\n",
+    "    # n_clusters is a vector of K for each depth.  The depth of the tree == length of n_clusters.\n",
+    "    if type(n_clusters) != tuple:\n",
+    "      # if given a non-tuple (int) make it a tuple.\n",
+    "      n_clusters = (n_clusters,)\n",
+    "    h_kmeans.n_jobs = n_jobs\n",
+    "    self.my_k = n_clusters\n",
     "    # print (\"Initializing KMeans, n_clusters = {}\".format(self.my_k[0]))\n",
     "    self.km = KMeans(n_clusters=self.my_k[0], n_jobs=h_kmeans.n_jobs)\n",
     "    self.children = []\n",
-    "    if len(k_breadth) > 1:\n",
+    "    if len(n_clusters) > 1:\n",
     "      # Remove my k, pass the rest to the children.\n",
-    "      self.children = [h_kmeans(k_breadth[1:]) for km in range(self.my_k[0])]\n",
-    "      # self.children = [h_kmeans(k_breadth[1:])] * self.my_k[0]\n",
+    "      self.children = [h_kmeans(n_clusters[1:]) for km in range(self.my_k[0])]\n",
+    "      # self.children = [h_kmeans(n_clusters[1:])] * self.my_k[0]\n",
     "\n",
     "  def fit(self, X):\n",
-    "    self.km.fit(X)\n",
+    "    if len(X) > 5000 and len(self.children) > 0:\n",
+    "      rand_indexes = np.random.randint(len(X), size=5000)\n",
+    "      self.km.fit(X[rand_indexes])\n",
+    "    else:\n",
+    "      self.km.fit(X)\n",
     "    if len(self.children) > 0:\n",
     "      clusters = self.km.predict(X)\n",
+    "      # print(\"fitting children with row count:\", end='')\n",
     "      for index, child_node in enumerate(self.children):\n",
     "        # pick out the rows that were predicted for cluster child_node.\n",
     "        match = clusters == index\n",
-    "        print(\"fitting child using {} rows.\".format(np.sum(match)))\n",
+    "        # print(\"{}, \".format(np.sum(match)), end='')\n",
     "        child_node.fit(X[match])\n",
+    "      # print(\"\")\n",
+    "    return self\n",
     "  \n",
     "  def predict(self, X):\n",
     "    if len(self.children) == 0:\n",
@@ -128,6 +126,59 @@
     "        depth_clusters.append(\n",
     "          clusters[i] * self.my_k[1] + self.children[clusters[i]].predict(X[i].reshape(1, -1)).item())\n",
     "      return np.array(depth_clusters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_histograms(km, dataset, K, k):\n",
+    "  hist_points = []\n",
+    "  chunk_tally = 0\n",
+    "  for example in dataset:\n",
+    "    split_image = []\n",
+    "    for offset in range(0, k, 11): # 0, 11, 22, to get about 3 x 13544 chunks.\n",
+    "      split_image.extend(split_and_flatten_example(example[0], k, k - offset))\n",
+    "    split_image = np.array(split_image)\n",
+    "#     split_image = split_and_flatten_example(example[0], k, 0)\n",
+    "    chunk_tally += len(split_image)\n",
+    "    clusters = km.predict(split_image)\n",
+    "    hist, bin_edges = np.histogram(clusters, density=True, bins=np.arange(K+1))\n",
+    "    hist_points.append(hist)\n",
+    "  print(\"number of chunks histogrammed: {}.\".format(chunk_tally))\n",
+    "  hist_points = np.array(hist_points)\n",
+    "  class_labels = np.array(list(zip(*dataset))[1])\n",
+    "  return hist_points, class_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def measure_accuracy_with_folding(hist_points, class_labels):\n",
+    "  accuracies = []\n",
+    "  kf = KFold(n_splits=3, shuffle=True)\n",
+    "  for train_index, test_index in kf.split(hist_points, class_labels):\n",
+    "    X_train, X_test = hist_points[train_index], hist_points[test_index]\n",
+    "    y_train, y_test = class_labels[train_index], class_labels[test_index]\n",
+    "    clf = RandomForestClassifier(n_estimators=750, max_depth=60)\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    y_prediction = clf.predict(X_test)\n",
+    "    accuracies.append(np.sum(y_prediction == y_test) / len(y_test))\n",
+    "  print(\"accuracy mean: {}\\n\\tindividual: {}\".format(np.mean(accuracies), accuracies))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset, labels = load_data()"
    ]
   },
   {
@@ -155,62 +206,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K = 480"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# Run k-means\n",
-    "# km = KMeans(n_clusters=480, random_state=0, n_jobs=2).fit(dictionary)\n",
-    "hkm = h_kmeans((40,12))\n",
-    "hkm.fit(dictionary)\n",
-    "# km.predict"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "split_image = split_and_flatten_example(example[0][0], k, 0)\n",
-    "pred = hkm.predict(split_image)\n",
-    "pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "km = KMeans(n_clusters=480, random_state=0, n_jobs=2).fit(dictionary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist_points = []\n",
-    "for example in dataset:\n",
-    "  split_image = split_and_flatten_example(example[0], k, 0)\n",
-    "  clusters = km.predict(split_image)\n",
-    "  hist, bin_edges = np.histogram(clusters, density=True, bins=np.arange(K+1))\n",
-    "  hist_points.append(hist)\n",
-    "hist_points = np.array(hist_points)\n",
-    "class_labels = np.array(list(zip(*dataset))[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kf = KFold(n_splits=3, shuffle=True)\n",
-    "for train_index, test_index in kf.split(hist_points, class_labels):\n"
+    "# k_experiments = ((32, 15), 480, (40, 12))#, (15, 8, 4))\n",
+    "# k_experiments = (100, 200, 300, 400, 480, 500)\n",
+    "k_experiments = (10, 25, 50, 100, 125, 150, 175, 200, 225, 250)\n",
+    "# k_experiments = (200, 480)\n",
+    "for k_val in k_experiments:\n",
+    "  print(\"k_val: {}\".format(k_val))\n",
+    "  km = h_kmeans(k_val, n_jobs=-1).fit(dictionary)\n",
+    "  hist_points, class_labels = get_histograms(km, dataset, np.prod(k_val), k)\n",
+    "  measure_accuracy_with_folding(hist_points, class_labels)"
    ]
   },
   {
@@ -266,10 +270,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "def set_all_to_value(a, value):\n",
     "  a.fill(value)\n",
@@ -281,10 +283,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# x = np.array([(1, 2),(3,4)], dtype=[('aasdf', np.int8), ('bwerewr', np.int8)])\n",
     "x = np.array([1, 2, 3, 4])# , dtype=[('aasdf', np.int8), ('bwerewr', np.int8)])\n",
@@ -300,29 +300,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.arange(5)\n",
-    "x\n",
-    "\n",
-    "y = x[::2]\n",
-    "y\n",
-    "\n",
-    "y[0] = 3\n",
-    "x\n",
-    "\n",
-    "np.sum(x == 3)\n",
-    "# x == 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "a = np.array(5)\n",
     "b = np.array(6)\n",
@@ -332,6 +311,41 @@
     "v.append(b.item())\n",
     "v.append(c.item())\n",
     "v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sliding Window"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "def window_stack(a, stepsize, width):\n",
+    "  n = a.shape[0]\n",
+    "  return np.hstack( a[i:1+n+i-width:stepsize] for i in range(0,width) )"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "a = dataset[0][0]\n",
+    "# w = np.hstack((a[:-2],a[1:-1],a[2:]))\n",
+    "# a = np.arange(64).reshape(2,32).T\n",
+    "print(np.ravel(a))\n",
+    "print(a)\n",
+    "print(a.shape)\n",
+    "# print(a[0:32:4])\n",
+    "# print(a[1:32:4])\n",
+    "# print(np.hstack([a[0:32:4], a[1:32:4]]))\n",
+    "w = window_stack(a, 4, 32)\n",
+    "print(w)\n",
+    "print(w.shape)\n",
+    "# a[1:5:2]"
    ]
   }
  ],
