Adopted sliding window slicing, a few other tweaks.

--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -45,9 +45,7 @@
     "      if len(dirnames) == 0 and '_MODEL' not in dirname:\n",
     "        class_name = path_leaf(dirname)\n",
     "        labels.append(class_name)\n",
-    "#         print(\"dirname: {}, filenames: {}\".format(dirname, len(filenames)))\n",
     "        for filename in filenames:\n",
-    "#             print(os.path.join(dirname, filename))\n",
     "            dataset.append((np.loadtxt(os.path.join(dirname, filename)), label_index))\n",
     "        label_index += 1\n",
     "  return dataset, labels"
@@ -59,14 +57,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def split_and_flatten_example(example, k, offset):\n",
-    "  chunk_list = np.array_split(example, np.arange(k, len(example), step=k))\n",
-    "  if len(chunk_list[-1]) != k:\n",
-    "    chunk_list = chunk_list[:-1]\n",
-    "  if offset != k:\n",
-    "    chunk_list = chunk_list[1:]\n",
-    "  chunk_list = [np.ravel(chunk) for chunk in chunk_list]\n",
-    "  return chunk_list"
+    "def window_stack(a, stepsize, width):\n",
+    "  n = a.shape[0]\n",
+    "  return np.hstack( a[i:1+n+i-width:stepsize] for i in range(0,width) )\n",
+    "\n",
+    "def get_flattened_data(data, stepsize, width):\n",
+    "  flattened_data = window_stack(data[0][0], stepsize, width)\n",
+    "  for i in range(1, len(dataset)):\n",
+    "    slices = window_stack(data[i][0], stepsize, width)\n",
+    "    flattened_data = np.concatenate((flattened_data, slices), axis=0)\n",
+    "  return flattened_data\n",
+    "\n",
+    "# def split_and_flatten_example(example, k, stepsize):\n",
+    "#   chunk_list = window_stack(example, stepsize, k)\n",
+    "# #   chunk_list = np.array_split(example, np.arange(k, len(example), step=k))\n",
+    "#   if len(chunk_list[-1]) != k:\n",
+    "#     chunk_list = chunk_list[:-1]\n",
+    "#   if stepsize != k:\n",
+    "#     chunk_list = chunk_list[1:]\n",
+    "# #   chunk_list = [np.ravel(chunk) for chunk in chunk_list]\n",
+    "#   return chunk_list"
    ]
   },
   {
@@ -136,18 +146,11 @@
    "source": [
     "def get_histograms(km, dataset, K, k):\n",
     "  hist_points = []\n",
-    "  chunk_tally = 0\n",
     "  for example in dataset:\n",
-    "    split_image = []\n",
-    "    for offset in range(0, k, 11): # 0, 11, 22, to get about 3 x 13544 chunks.\n",
-    "      split_image.extend(split_and_flatten_example(example[0], k, k - offset))\n",
-    "    split_image = np.array(split_image)\n",
-    "#     split_image = split_and_flatten_example(example[0], k, 0)\n",
-    "    chunk_tally += len(split_image)\n",
+    "    split_image = window_stack(example[0], 11, k)\n",
     "    clusters = km.predict(split_image)\n",
     "    hist, bin_edges = np.histogram(clusters, density=True, bins=np.arange(K+1))\n",
     "    hist_points.append(hist)\n",
-    "  print(\"number of chunks histogrammed: {}.\".format(chunk_tally))\n",
     "  hist_points = np.array(hist_points)\n",
     "  class_labels = np.array(list(zip(*dataset))[1])\n",
     "  return hist_points, class_labels"
@@ -165,7 +168,7 @@
     "  for train_index, test_index in kf.split(hist_points, class_labels):\n",
     "    X_train, X_test = hist_points[train_index], hist_points[test_index]\n",
     "    y_train, y_test = class_labels[train_index], class_labels[test_index]\n",
-    "    clf = RandomForestClassifier(n_estimators=750, max_depth=60)\n",
+    "    clf = RandomForestClassifier(n_estimators=750, max_depth=120)\n",
     "    clf.fit(X_train, y_train)\n",
     "    y_prediction = clf.predict(X_test)\n",
     "    accuracies.append(np.sum(y_prediction == y_test) / len(y_test))\n",
@@ -189,27 +192,23 @@
    "source": [
     "# Cut into k-sized chunks and fill the dictionary.\n",
     "k = 32\n",
-    "# TODO: dictionary is a poor name for this.\n",
-    "dictionary = []\n",
-    "for example in dataset:\n",
-    "  data = example[0]\n",
-    "  for offset in range(0, k, 11): # 0, 11, 22, to get about 3 x 13544 chunks.\n",
-    "    split_data = split_and_flatten_example(data, k, k - offset)\n",
-    "    # print(\"example size: {} split into {} chunks\".format(data.shape,len(split_data)))\n",
-    "    dictionary.extend(split_data)\n",
-    "dictionary = np.array(dictionary) # convert from list of arrays to 2D array"
+    "dictionary = get_flattened_data(dataset, 11, k)\n",
+    "print(dictionary.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# k_experiments = ((32, 15), 480, (40, 12))#, (15, 8, 4))\n",
     "# k_experiments = (100, 200, 300, 400, 480, 500)\n",
-    "k_experiments = (10, 25, 50, 100, 125, 150, 175, 200, 225, 250)\n",
+    "# k_experiments = (10, 25, 50, 100, 125, 150, 175, 200, 225, 250)\n",
     "# k_experiments = (200, 480)\n",
+    "k_experiments = (400, 480, (32, 15), (40, 12), (15, 8, 4))\n",
     "for k_val in k_experiments:\n",
     "  print(\"k_val: {}\".format(k_val))\n",
     "  km = h_kmeans(k_val, n_jobs=-1).fit(dictionary)\n",
