Cleaned up dropped code.  Added sliding window reference.

--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -57,6 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# from https://stackoverflow.com/questions/15722324/sliding-window-in-numpy\n",
     "def window_stack(a, stepsize, width):\n",
     "  n = a.shape[0]\n",
     "  return np.hstack( a[i:1+n+i-width:stepsize] for i in range(0,width) )\n",
@@ -66,17 +67,7 @@
     "  for i in range(1, len(dataset)):\n",
     "    slices = window_stack(data[i][0], stepsize, width)\n",
     "    flattened_data = np.concatenate((flattened_data, slices), axis=0)\n",
-    "  return flattened_data\n",
-    "\n",
-    "# def split_and_flatten_example(example, k, stepsize):\n",
-    "#   chunk_list = window_stack(example, stepsize, k)\n",
-    "# #   chunk_list = np.array_split(example, np.arange(k, len(example), step=k))\n",
-    "#   if len(chunk_list[-1]) != k:\n",
-    "#     chunk_list = chunk_list[:-1]\n",
-    "#   if stepsize != k:\n",
-    "#     chunk_list = chunk_list[1:]\n",
-    "# #   chunk_list = [np.ravel(chunk) for chunk in chunk_list]\n",
-    "#   return chunk_list"
+    "  return flattened_data"
    ]
   },
   {
