--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -20,6 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import KMeans\n",
     "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
@@ -155,7 +156,7 @@
    "source": [
     "def measure_accuracy_with_folding(hist_points, class_labels):\n",
     "  accuracies = []\n",
-    "  kf = KFold(n_splits=3, shuffle=True)\n",
+    "  kf = StratifiedKFold(n_splits=3, shuffle=True)\n",
     "  for train_index, test_index in kf.split(hist_points, class_labels):\n",
     "    X_train, X_test = hist_points[train_index], hist_points[test_index]\n",
     "    y_train, y_test = class_labels[train_index], class_labels[test_index]\n",
@@ -198,8 +199,8 @@
     "# k_experiments = ((32, 15), 480, (40, 12))#, (15, 8, 4))\n",
     "# k_experiments = (100, 200, 300, 400, 480, 500)\n",
     "# k_experiments = (10, 25, 50, 100, 125, 150, 175, 200, 225, 250)\n",
-    "# k_experiments = (200, 480)\n",
-    "k_experiments = (400, 480, (32, 15), (40, 12), (15, 8, 4))\n",
+    "# k_experiments = (240, 480)\n",
+    "k_experiments = (200, 480, (32, 15), (40, 12), (15, 8, 4))\n",
     "for k_val in k_experiments:\n",
     "  print(\"k_val: {}\".format(k_val))\n",
     "  km = h_kmeans(k_val, n_jobs=-1).fit(dictionary)\n",
@@ -355,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
